manifest/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  ports:
    - name: http
      port: 8808
      protocol: TCP
      targetPort: 8808
  selector:
    run: go-sample
  sessionAffinity: None
  type: ClusterIP
