manifest/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-route
spec:
  rules:
    - host: www.c3340ad5c4bda474e863f94e4629d72f7.cn-zhangjiakou.alicontainer.com
      http:
        paths:
          - backend:
              service: 
                name: go-service
                port:
                  number: 8080
            path: /
              pathType: Prefix
